base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: Demo
  name: backend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
    deployment: backend
  sessionAffinity: None
  type: ClusterIP
